ok js, manca validation

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10899,3 +10899,21 @@ a.text-dark:focus {
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background: purple;
+}
+
+.app,
+.container {
+  width: 100%;
+  height: 100%;
+}
+
